--- a/_drafts/如何跳出条件嵌套地狱.md
+++ b/_drafts/如何跳出条件嵌套地狱.md
@@ -5,24 +5,28 @@ categories: 编程经验
 ---
 
 # 什么是条件嵌套地狱
-说到编程，大家肯定知道条件语句，虽然每种编程语言的条件语句写法可能会不一样，但是也大同小异吧。
-最常见的就是if语句：
+条件嵌套相信大家都知道是什么，就是一个条件语句里面还嵌套了一个或多个的条件语句，嵌套两三层还好，但是如果超过三层的话，代码就会开始变得复杂，就像下面的代码：
 {% highlight c %}
    if (condition1) {
-      i++;
-   }
-{% endhighlight %}
-上面的代码很简单，但是实际情况肯定要判断的条件不止一个，例如
-{% highlight c %}
-   if (condition1) {
-      i++;
-      
+      // 此处一般是一些逻辑代码
       if (condition2) {
-      	 j++;	 
+      	 // 此处一般是一些逻辑代码
+      	 if (condition3) {
+	    // 此处一般是一些逻辑代码
+	    if (condition4) {
+	       // 此处一般是一些逻辑代码
+	    }
+	 }
       }
    }
 {% endhighlight %}
+一大堆的括号，每次看到这种代码都非常的费力，一不小心就会把代码写错到了错的代码块里面。因为最近都在维护别人的代码，还真的遇到许多这样的代码，一段逻辑几百行，七八个if-else的嵌套，所以给这样的代码叫做条件嵌套地狱，下面我也总结一下跳出这样的编程怪圈的方法。
 
 # 如何解决
+1. **输入参数合法性判断代码不写到主逻辑里**
+1. **判断到非法的输入参数马上结束逻辑**
+1. **判断到错误的情况马上结束逻辑**
+1. **使用策略模式**
 
 # 总结
+
