--- a/_drafts/如何跳出条件嵌套地狱.md
+++ b/_drafts/如何跳出条件嵌套地狱.md
@@ -26,6 +26,7 @@ categories: 编程经验
 1. **输入参数合法性判断代码不写到主逻辑里**
 1. **判断到非法的输入参数马上结束逻辑**
 1. **判断到错误的情况马上结束逻辑**
+1. **拆分条件语句内的逻辑到函数**
 1. **使用策略模式**
 
 # 总结
